# grafomem

./: .dockerignore  .gitignore  Dockerfile  GOVERNANCE.md  KEY_CUSTODY.md  README.md  bge_output.txt  bge_test.py  debug_c5.py  docker-compose.dev.yml  docker-compose.yml  fix_postgres.py  fix_postgres_pool.py  fix_postgres_rls.py  ontology_manifold_probe.py  patch_whitepaper_v2_7_1_docfixes.py  pentest.db  poc_open_wearables_beourbest.html  poc_open_wearables_beourbest.md  pyproject.toml  query_erasure_prod.py  query_railway.py  rewrite_pg.py  rewrite_tests.py  run_dev_server.py  run_local_flight.sh  run_sandbox.sh  scratch.py  scratch2.py  scratch3.py  scratch4.py  scratch5.py  scratch6.py  scratch7.py  scratch8.py  scratch_dump.py  scratch_dump_prod.py  scratch_sql.py  scratch_test_health.sh  scratch_verify_step2.py  (+9 more)
.github/workflows/: ci.yml
adapter_template/: README.md  conftest.py  my_backend.py  pyproject.toml
adapters/langgraph-checkpoint-grafomem/: pyproject.toml
adapters/langgraph-checkpoint-grafomem/langgraph_checkpoint_grafomem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
adapters/langgraph-checkpoint-grafomem/langgraph_checkpoint_letha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adapters/langgraph-checkpoint-grafomem/tests/: test_adapter.py
autocertify/: landing_service.py  register_to_certify_e2e.py
corpus/: corpus.toml
docs/: 01-workload-spec.md  02-backend-interface.md  03-eval-metrics.md  Addressing the Big Question.docx  KEY_CUSTODY.md  adapter-guide.md  build_paper.py  findings-registry-design.md  gmp-spec-v0.1.md  gmp-spec-v0.2.md  grafomem-cloud-whitepaper-v1.3.md  grafomem-cloud-whitepaper-v2.6.9.md  grafomem-cloud-whitepaper-v2.6.md  grafomem-cloud-whitepaper-v2_7.md  grafomem-cloud-whitepaper-v2_7_1.md  grafomem-paper.md
docs/cloud/: backup-dr-runbook.md  slo-commitments.md
landing/: README.md  pyproject.toml
landing/conformance/: __init__.py  code_world_model.py  composition.py  gates.py  gates_phase2.py  run_phase1.py  run_phase2.py  seed_gns.py
landing/conformance/artifacts/: phase1_article10_dossier.json  phase1_gate_report.md  phase1_gcrumbs_chain.json  phase1_landing_certificate.json  phase1_offline_bundle.json  phase1_world_model.json  phase2_composition.json  phase2_gate_report.md  phase2_landing_certificate.json  phase2_offline_bundle.json
landing/spec/: 04-landing-certificate.md  05-world-model-interface.md
landing/src/grafomem_landing/: __init__.py  certificate.py  crumbs.py  hashing.py  identity.py  worldmodel.py
monitoring/: alertmanager.yml  prometheus-alerts.yml
phase_b/: INTEGRATION.md  landing_routes.py  landing_service.py  sdk_landing.py
phase_b_wired/: INTEGRATION.md  landing_certificates.sql  landing_service.py  sdk_landing.py
r2/: INTEGRATION.md  provenance_customs_routes.py  provenance_customs_self_conformance.py  sdk_provenance.py
r4/: INTEGRATION.md  composition_governance.py  composition_governance_self_conformance.py
r5/: INTEGRATION.md  sdk_world_model.py  world_model_self_conformance.py
results/: R6-Publication-Tracker.md  W1-finding.md  W2-finding.md  W3-finding.md  W4-finding.md  W5-finding.md  W6-finding.md  W7-finding.md  W8-finding.md  W9-finding.md  findings.py  findings.toml  full_audit_report.json
scratch/: apply_migration.py  audit_railway.py  check_code.py  check_db_keys.py  check_server.py  check_sweep.py  debug_hash.py  debug_query.py  debug_replay.py  debug_workflow.py  delete_tenants.py  demo_schema.sql  demo_w9_erasure.py  get_constraint.py  p0_3b_trace.py  patch.py  refactor_orch.py  refactor_orchestrator.py  refactor_postgres_gmp.py  reproduce_500.py  run_server_local_db.py  sealed_flight_test.py  test_apikey.py  test_create_policy.py  test_db.py  test_db_pool_del.py  test_freshness.py  test_gcrumbs_export.py  test_get_wf.py  test_proxy.py  test_psycopg_policy.py  test_tamper.py  test_vault_pentest.py  test_verifier.py  verify_anthropic_cache.py
scripts/: batch_ingest_bench.py  check_tenants.py  dogfood_setup.py  drop_synthetic.py  export_openapi.py  generate_corpus.py  generate_reports.py  migrate_manifold.py  migrate_prod_keys.py  phase1_flight.py  phase1_live_flight.py  run_live_flight.py  run_live_resilience.py  run_phase1_conformance_flight.sh  run_w1.py  run_w10.py  run_w2.py  run_w3.py  run_w4.py  run_w5.py  run_w6.py  run_w7.py  run_w8.py  run_w9.py  scale_probe.py  vec_meta_probe.py  verify_finding1.py  verify_phase0.py  verify_restore_probe.py  w7_classify.py
sdk/: README.md  pyproject.toml
sdk/src/grafomem/: __init__.py  _async_http.py  _http.py  async_client.py  client.py  errors.py  pagination.py  types.py  webhooks.py
sdk/src/grafomem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/src/grafomem/autogen/: __init__.py  hooks.py  memory.py
sdk/src/grafomem/crewai/: __init__.py  callbacks.py  storage.py
sdk/src/grafomem/langchain/: __init__.py  history.py  memory.py
sdk/src/grafomem/services/: __init__.py  artifacts.py  compositions.py  decisions.py  erasure.py  governance.py  llm.py  memories.py  orchestrator.py  portal.py  reports.py  stores.py  webhooks.py
src/aml/: cli.py  (+2 more)
tests/: __init__.py  artifact_registry_self_conformance.py  check_api_key.py  composition_governance_self_conformance.py  conftest.py  gcrumbs_self_conformance.py  gmp_self_conformance.py  landing_self_conformance.py  live_api_flight.py  mock_llm.py  provenance_customs_self_conformance.py  qdrant_self_conformance.py  register_to_certify_e2e.py  sandbox_e2e.py  sandbox_e2e_v2.py  sandbox_financial_template.py  sandbox_server.py  scratch_b0_final.py  scratch_b0_pin.py  scratch_b0_pin2.py  test_assurance.py  test_autogen_adapter.py  test_c4_prod_dims.py  test_c5_snapshot_restore.py  test_cache_metrics.py  test_concurrency.py  test_conformance.py  test_context_router.py  test_corpus.py  test_crewai_adapter.py  test_dogfood_ingestion.py  test_encryption.py  test_erasure_bugfix.py  test_erasure_daemon.py  test_gcrumbs_b0.py  test_hitl_routes.py  test_hitl_unauthorized.py  test_integration_seams.py  test_interface.py  test_llm_providers.py  (+20 more)
(+177 files in other folders)
