[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "grafomem"
version = "0.2.0"
description = "GRAFOMEM — agent-memory conformance benchmark and compliance toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Camilo Ayerbe Posada" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jsonschema>=4",
    "click>=8",
]

[project.urls]
Homepage = "https://github.com/GNS-Foundation/grafomem"
Documentation = "https://github.com/GNS-Foundation/grafomem/tree/main/docs"
Repository = "https://github.com/GNS-Foundation/grafomem"
Issues = "https://github.com/GNS-Foundation/grafomem/issues"
API = "https://grafomem-production.up.railway.app/docs"

[project.scripts]
grafomem = "aml.cli:main"

[project.optional-dependencies]
# Reference vector adapter (vector_only): pinned embedding model + exact cosine.
backends = ["sentence-transformers>=2.2", "numpy>=1.24"]
store = ["sqlite-vec", "apsw"]
crypto = ["cryptography>=41"]
# Production server: FastAPI + MCP + batched ingestion.
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "mcp>=1.0", "pydantic>=2.0"]
all = ["grafomem[crypto,backends,store,server]"]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
