[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "grafomem"
version = "0.3.0"
description = "GRAFOMEM — agent-memory conformance benchmark and compliance toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Camilo Ayerbe Posada" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jsonschema>=4",
    "click>=8",
]

[project.urls]
Homepage = "https://grafomem.com"
Documentation = "https://docs.grafomem.com"
Repository = "https://github.com/GNS-Foundation/grafomem"
Issues = "https://github.com/GNS-Foundation/grafomem/issues"
API = "https://grafomem-production.up.railway.app/docs"
Portal = "https://grafomem-production.up.railway.app/portal"

[project.scripts]
grafomem = "aml.cli:main"

[project.optional-dependencies]
# Reference vector adapter (vector_only): pinned embedding model + exact cosine.
backends = ["sentence-transformers>=2.2", "numpy>=1.24"]
store = ["sqlite-vec", "apsw"]
crypto = ["cryptography>=41"]
# PostgreSQL + pgvector backend (GRAFOMEM Cloud).
postgres = ["psycopg[binary]>=3.1", "psycopg_pool>=3.2", "pgvector>=0.3", "numpy>=1.24"]
# Production server: FastAPI + MCP + batched ingestion.
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "mcp>=1.0", "pydantic>=2.0", "sse-starlette>=2.0", "fpdf2>=2.8"]
# GRAFOMEM Cloud: managed service with tenant provisioning + metering.
cloud = ["grafomem[postgres,server,crypto]", "stripe>=8.0", "bcrypt>=4.0", "PyJWT>=2.8", "authlib>=1.3", "prometheus-client>=0.20", "apscheduler>=3.10", "pandas>=2.0", "minisom>=2.3", "scikit-learn>=1.3", "psycopg2-binary>=2.9"]
all = ["grafomem[crypto,backends,store,server,postgres,cloud,llm]"]
anthropic = ["anthropic>=0.30"]
gemini = ["google-genai>=1.0"]
llm = ["openai>=1.0", "anthropic>=0.30", "google-genai>=1.0"]
crewai = ["crewai>=0.60,<2.0"]
autogen = ["autogen-agentchat>=0.4"]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
