[project]
name = "my-gmp-backend"
version = "0.1.0"
description = "GMP-conformant memory backend adapter"
requires-python = ">=3.11"

dependencies = [
    "grafomem",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.build_meta"
