[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "grafomem"
version = "0.2.0"
description = "Python SDK for GRAFOMEM Cloud — governed agent memory platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GNS Foundation", email = "sdk@grafomem.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://grafomem.com"
Documentation = "https://docs.grafomem.com/sdk"
Repository = "https://github.com/GNS-Foundation/grafomem"
API = "https://cloud.grafomem.com/docs"
Portal = "https://cloud.grafomem.com/portal"

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
async = ["httpx[http2]"]
dev = ["pytest>=8", "pytest-httpx>=0.30", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["src"]
